--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./logofut.PNG" type="image/x-icon" />
-    <title>FUTchurras</title>
+    <title>Sobre nós</title>
     <style>
         /* scrollbar */
         *::-webkit-scrollbar {
@@ -26,7 +26,7 @@
 
         /* body */
         body {
-            font: normal 14px Arial;
+            font: normal 16px Arial;
             margin: 0 auto;
             background-color: #CEEFF8;
             color: #333333;
@@ -157,6 +157,11 @@
             .open {
                 display: block;
             }
+
+            main .sobre {
+                
+            }
+
         }
 
         /* main */
@@ -182,6 +187,27 @@
 
         main {
             padding: 8px;
+        }
+
+        .sobre {
+            padding: 40px;
+            padding-left: 300px;
+            display: block;
+            justify-content: space-evenly;
+            padding: 50px;
+            max-width: none;
+            text-align: justify;
+        }
+
+        .sobre h1 {
+            display: flex;
+            justify-content: center;
+        }
+
+        .att {
+            padding-top: 50px;
+            display: flex;
+            justify-content: right;
         }
     </style>
 </head>
@@ -228,6 +254,19 @@
                 <img class="icon" src="./logotorneio2.png" alt="logo-futchurras" class="logotorneio2">
             <div class="texto-torneio">3º Torneio FUTchurras 💚⚽</div>
         </nav>
+
+        <div class="sobre">
+            <h1>
+                O que é o FUTchurras?
+            </h1>
+            <p>Em 2018 nos unimos para criar uma experiência única. Somos um grupo de amigos apaixonados pelo esporte mais popular do mundo, e decidimos transformar essa paixão em um estilo de vida.</p>
+            <p>Priorizamos a amizade, a diversão e a camaradagem através do futebol e de um bom churrasco. Buscamos momentos de lazer, amizade e muita comédia, que são o diferencial da nossa pelada. Acreditamos que esses momentos são perfeitos para fortalecer laços, criar memórias duradouras e desfrutar daquilo que realmente importa: estar junto de amigos.</p>
+            <p>Este estamos promovendo o 3º torneio FUTchurras! Uma competição divertida e emocionante, onde teremos a chance de mostrar as "habilidades", nos divertir com os amigos e, é claro, comer um churrasco. O torneio tem gente de tudo que é tipo, gordo, magro, bissexual, trans, castrado, sem perna, autista, dentre outros. Afinal, o que importa é a vontade de se divertir e rir muito.</p>
+            <p>Nossa busca por diversão, esporte, churrasco e amizade, foi realizada no FUTchurras, o lugar perfeito para distrair.
+            </p>
+            <p>Obrigado por fazer parte do FUTchurras!</p>
+            <p class="att">Att: A Diretoria</p>
+        </div>
     </main>
     <script>
         function menuShow() {
