--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                     <li class="nav-item"><a href="#" class="nav-link">Início</a></li>
                     <li class="nav-item"><a href="#" class="nav-link">Jogos</a></li>
                     <li class="nav-item"><a href="#" class="nav-link">Tabela</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link">Sobre</a></li>
+                    <li class="nav-item"><a href="https://alvesdev1.github.io/sobre/" class="nav-link">Sobre</a></li>
                 </ul>
                 <div class="login-button">
                     <button><a href="https://alvesdev1.github.io/projeto-login/">Entrar</a></button>
