--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
             </a>
             <div class="nav-list">
                 <ul>
-                    <li class="nav-item"><a href="#" class="nav-link">Início</a></li>
+                    <li class="nav-item"><a href="https://alvesdev1.github.io/futchurras/" class="nav-link">Início</a></li>
                     <li class="nav-item"><a href="#" class="nav-link">Jogos</a></li>
                     <li class="nav-item"><a href="#" class="nav-link">Tabela</a></li>
                     <li class="nav-item"><a href="https://alvesdev1.github.io/sobre/" class="nav-link">Sobre</a></li>
@@ -237,7 +237,7 @@
         </nav>
         <div class="mobile-menu">
             <ul>
-                <li class="nav-item"><a href="#" class="nav-link">Início</a></li>
+                <li class="nav-item"><a href="https://alvesdev1.github.io/futchurras/" class="nav-link">Início</a></li>
                 <li class="nav-item"><a href="#" class="nav-link">Jogos</a></li>
                 <li class="nav-item"><a href="#" class="nav-link">Tabela</a></li>
                 <li class="nav-item"><a href="https://alvesdev1.github.io/sobre/" class="nav-link">Sobre</a></li>
