--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
     <main>
         <nav class="info">
                 <img class="icon" src="./logotorneio2.png" alt="logo-futchurras" class="logotorneio2">
-            <div class="texto-torneio">3º Torneio FUTchurras 💚⚽</div>
+            <div class="texto-torneio">3º Torneio FUTchurras ⚽</div>
         </nav>
 
         <div class="sobre">
