--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
             <div class="nav-list">
                 <ul>
                     <li class="nav-item"><a href="https://alvesdev1.github.io/futchurras/" class="nav-link">Início</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link">Jogos</a></li>
+                    <li class="nav-item"><a href="https://alvesdev1.github.io/jogos/" class="nav-link">Jogos</a></li>
                     <li class="nav-item"><a href="#" class="nav-link">Tabela</a></li>
                     <li class="nav-item"><a href="https://alvesdev1.github.io/sobre/" class="nav-link">Sobre</a></li>
                 </ul>
@@ -240,7 +240,7 @@
         <div class="mobile-menu">
             <ul>
                 <li class="nav-item"><a href="https://alvesdev1.github.io/futchurras/" class="nav-link">Início</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">Jogos</a></li>
+                <li class="nav-item"><a href="https://alvesdev1.github.io/jogos/" class="nav-link">Jogos</a></li>
                 <li class="nav-item"><a href="#" class="nav-link">Tabela</a></li>
                 <li class="nav-item"><a href="https://alvesdev1.github.io/sobre/" class="nav-link">Sobre</a></li>
             </ul>
