--- a/index.html
+++ b/index.html
@@ -60,6 +60,12 @@
             align-items: center;
         }
 
+        .nav-link:hover {
+                background-color: rgba(2, 44, 2, 0.678);
+                transform: scale(1.10);
+                cursor: pointer;
+            }
+
         .nav-list ul {
             display: flex;
             justify-content: center;
@@ -114,6 +120,12 @@
 
             .nav-item {
                 display: none;
+            }
+
+            .nav-link:hover {
+                background-color: rgba(2, 44, 2, 0.678);
+                transform: scale(1.10);
+                cursor: pointer;
             }
 
             .login-button {
