--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
                 <ul>
                     <li class="nav-item"><a href="https://alvesdev1.github.io/futchurras/" class="nav-link">Início</a></li>
                     <li class="nav-item"><a href="https://alvesdev1.github.io/jogos/" class="nav-link">Jogos</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link">Tabela</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link">Tabelas</a></li>
                     <li class="nav-item"><a href="https://alvesdev1.github.io/sobre/" class="nav-link">Sobre</a></li>
                 </ul>
                 <!--
@@ -253,7 +253,7 @@
             <ul>
                 <li class="nav-item"><a href="https://alvesdev1.github.io/futchurras/" class="nav-link">Início</a></li>
                 <li class="nav-item"><a href="https://alvesdev1.github.io/jogos/" class="nav-link">Jogos</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">Tabela</a></li>
+                <li class="nav-item"><a href="#" class="nav-link">Tabelas</a></li>
                 <li class="nav-item"><a href="https://alvesdev1.github.io/sobre/" class="nav-link">Sobre</a></li>
             </ul>
 
