--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
             <p>Nossa busca por diversão, esporte, churrasco e amizade, foi realizada no FUTchurras, o lugar perfeito para distrair.
             </p>
             <p>Obrigado por fazer parte do FUTchurras!</p>
-            <p class="att">Att: A Diretoria</p>
+            <p class="att">A Diretoria</p>
         </div>
     </main>
     <script>
