--- a/index.html
+++ b/index.html
@@ -233,6 +233,7 @@
             <div class="nav-list">
                 <ul>
                     <li class="nav-item"><a href="https://alvesdev1.github.io/futchurras/" class="nav-link">Início</a></li>
+                    <li class="nav-item"><a href="https://alvesdev1.github.io/times/" class="nav-link">Times</a></li>
                     <li class="nav-item"><a href="https://alvesdev1.github.io/jogos/" class="nav-link">Jogos</a></li>
                     <li class="nav-item"><a href="https://alvesdev1.github.io/tabelas/" class="nav-link">Tabelas</a></li>
                     <li class="nav-item"><a href="https://alvesdev1.github.io/sobre/" class="nav-link">Sobre</a></li>
@@ -252,6 +253,7 @@
         <div class="mobile-menu">
             <ul>
                 <li class="nav-item"><a href="https://alvesdev1.github.io/futchurras/" class="nav-link">Início</a></li>
+                <li class="nav-item"><a href="https://alvesdev1.github.io/times/" class="nav-link">Times</a></li>
                 <li class="nav-item"><a href="https://alvesdev1.github.io/jogos/" class="nav-link">Jogos</a></li>
                 <li class="nav-item"><a href="https://alvesdev1.github.io/tabelas/" class="nav-link">Tabelas</a></li>
                 <li class="nav-item"><a href="https://alvesdev1.github.io/sobre/" class="nav-link">Sobre</a></li>
